--- a/client/app/index.html
+++ b/client/app/index.html
@@ -69,6 +69,7 @@
   <!-- build:js scripts/app.min.js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/main.js"></script>
+  <script src="scripts/controllers/restaurants.js"></script>
   <!-- endbuild -->
 
 </body>
