connect angular app to rails app

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<!--[if lt IE 9]> <html class="no-js lt-ie9" lang="en" ng-app="davkal.ViennaHackerLunch"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en" ng-app="davkal.ViennaHackerLunch"> <!--<![endif]-->
+<!--[if lt IE 9]> <html class="no-js lt-ie9" lang="en" ng-app="viennaLunch"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en" ng-app="viennaLunch"> <!--<![endif]-->
 <head>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>ViennaHackerLunch - Yet another amazing AngularJS app</title>
+  <title>Vienna Lunch</title>
   <meta name="description" content="Yet another amazing AngularJS app">
 
 <!--[if lt IE 9]>
@@ -19,11 +19,11 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- Set a shorter title for iOS6 devices when saved to home screen -->
-  <meta name="apple-mobile-web-app-title" content="ViennaHackerLunch">
+  <meta name="apple-mobile-web-app-title" content="ViennaLunch">
 
   <!-- Properties for Google+ snippets -->
-  <meta property="og:title" content="ViennaHackerLunch">
-  <meta property="og:description" content="Yet another amazing AngularJS app">
+  <meta property="og:title" content="ViennaLunch">
+  <meta property="og:description" content="Display lunch menus for restaurants in Vienna">
   <meta property="og:image" content="https://github.global.ssl.fastly.net/images/modules/logos_page/Octocat.png">
 
   <!-- Author of this application -->
