--- a/client/app/index.html
+++ b/client/app/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Vienna Lunch</title>
-  <meta name="description" content="Yet another amazing AngularJS app">
+  <meta name="description" content="Display lunch menus for restaurants in Vienna">
 
 <!--[if lt IE 9]>
   <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.min.js"></script>
@@ -46,11 +46,11 @@
 
   <div class="site-wrapper">
     <div class="site-wrapper-inner">
-      <div class="cover-container">
+      <div class="fluid-container">
         <div class="masthead clearfix">
           <div class="inner" ng-include="'views/partials/header.html'"></div>
         </div>
-        <div class="inner cover">
+        <div class="content">
           <div class="inner" ng-view></div>
         </div>
         <div class="mastfoot">
