--- a/client/app/index.html
+++ b/client/app/index.html
@@ -28,8 +28,8 @@
 
   <!-- Author of this application -->
   <link rel="author" href="https://github.com/davkal"> 
-  <link rel="icon" href="http://angularjs.org/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="http://angularjs.org/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
   <!-- build:css styles/components.min.css -->
   <!-- bower:css -->
