show restaurants on google map

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -70,6 +70,7 @@
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/main.js"></script>
   <script src="scripts/controllers/restaurants.js"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
   <!-- endbuild -->
 
 </body>
