improved meta description

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -6,7 +6,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Vienna Lunch</title>
-  <meta name="description" content="Display lunch menus for restaurants in Vienna">
+  <meta name="description" content="A fine selection of today's Vienna lunch menus.
+    Restaurants include Figar, Ulrich, Zweitbester, Woraczizcky, Cote Sud">
 
 <!--[if lt IE 9]>
   <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.min.js"></script>
